    features the addition of a 4th main routine kind, ... "recipe"/"rcp"...

    * (Basics.pod)  Added new terms 'atomic', 'transaction' to the NOTES ON
    TERMINOLOGY section, in order to help both distinguish those terms from
    each other, and avoid misconception of the Muldis D spec in general.

    * (Types_Catalog.pod)  Fixed omission from "TYPE SUMMARY" section.

    * Updated all author references to change Darren Duncan's stated email
    address from "perl@DarrenDuncan.net" to "darren@DarrenDuncan.net".

2009-10-20  Darren Duncan <darren@DarrenDuncan.net>

    * Muldis::D version 0.98.0 is released on CPAN as
    Muldis-D-0.98.0.tar.gz.

    * (Types_Catalog.pod)  Added new scalar catalog type
    "sys.std.Core.Type.Cat.OVLScalar", which is an explicitly defined union
    type over all of and just the system-defined DH-scalar types for whose
    values all of the Muldis D standard dialects provide "opaque value
    literal" syntax for, which is currently 18 scalar root types.  Also
    updated the "ScaValExprNodeSet" catalog type so that its "value"
    attribute is now simply an "OVLScalar" rather than
    "DHScalar"-plus-vague-constraint-description.  This change should help
    improve portability between Muldis D implementations and dialects, as
    previously what "value" was allowed to contain was specified
    implementation or dialect dependent.

    * (Types.pod, Types_Catalog.pod, Integer.pod, Blob.pod, Rational.pod,
    Temporal.pod)  Updated the "TYPE SUMMARY" main pod section to insert
    new "OVLScalar" between "DHScalar" and latter's hierarchy descendants.

    * (Types_Catalog.pod, Routines_Catalog.pod, PTMD_STD.pod)  Renamed the
    2 catalog types "Sca[Val|PRSel]ExprNodeSet" to
    "[OVLScaVal|ScaSel]ExprNodeSet", respectively.  Also updated the
    "ExprNodeSet" catalog type to rename is 2 attributes
    "sca_[val|pr_sel]_exprs" to "[ovl_sca_val|sca_sel]_exprs".

    * (PTMD_STD.pod)  The Muldis D dialects are now a bit stricter in