@@ -16,6 +16,17 @@
 
     * (Types_Catalog.pod)  Fixed omission from "TYPE SUMMARY" section.
 
+    * (Makefile.PL, D.pm, Muldis_D_00_Compile.t)  Updated the distro so
+    that normal users only need the most minimal dependencies reasonably
+    possible, meaning it now only requires Perl 5.6.0+ rather than 5.8.1+,
+    and it requires no modules at all that weren't bundled with 5.6.0+. 
+    This seemed appropriate since the distro is documentation-only and
+    doesn't have any normal code to run, just POD to render (on the other
+    hand, that POD *is* UTF-8).  Updated the test file, which exists just
+    to make generic CPAN build and testing facilities happy, to use "Test"
+    rather than "Test::More" since that's all Perl 5.6.0 bundled.  Also
+    updated the Makefile.PL (and META.yml) to add "resources" urls.
+
     * Updated all author references to change Darren Duncan's stated email
     address from "perl@DarrenDuncan.net" to "darren@DarrenDuncan.net".
 
